--- a/part5/bloglist-frontend/src/index.css
+++ b/part5/bloglist-frontend/src/index.css
@@ -6,6 +6,13 @@
   padding: 10px;
   margin-bottom: 10px;
 }
-
 .confirmation {color: green;}
 .error {color: red;}
+
+.blog {
+  padding-top: 10px;
+  padding-left: 2px;
+  border: solid;
+  border-width: 1px;
+  margin-bottom: 5px;
+}
